<resources>
    <string name="app_name">共享车位</string>

    <!--登录和注册-->
    <string name="login">登录</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="register">注册</string>
    <string name="forget_password">忘记密码 ？</string>
    <string name="finish_app">确定注销么？</string>
    <string name="get_identifying_code">获取验证码</string>
    <string name="phone_number">手机号</string>


    <string name="rent_parking_message">租用详情</string>
    <string name="my_parking">我的车位</string>
    <string name="ordering_parking">预定车位</string>
    <string name="publish_parking_message">发布详情</string>
    <string name="main_bottom_text">共享车位为您提供便利！</string>

    <!--用户信息-->
    <string name="user_message">用户信息</string>
    <string name="my_wallet">我的钱包</string>
    <string name="order_history">历史订单</string>
    <string name="news_cneter">消息中心</string>
    <string name="my_benifit">我的优惠</string>
    <string name="setting">设置</string>
    <string name="finish_user_message">注销</string>

    <!--车位信息-->
    <string name="main_interface">智能车位</string>
    <string name="bluetooth_state">蓝牙状态：</string>
    <string name="bluetooth_off">关</string>
    <string name="bluetooth_on">开</string>
    <string name="register_reger_bt">提交</string>
    <string name="register_parking">车位注册</string>
    <string name="nearby_parking">附近车位</string>
    <string name="release_parking">车位发布</string>
    <string name="rent_parking">车位租用</string>
    <string name="parking_address">车位地址：</string>
    <string name="parking_detail_address">详细地址：</string>
    <string name="parking_state">车位状态：</string>
    <string name="publish_parking">发布车位</string>
    <string name="cancle_publish_parking">取消发布</string>
    <string name="delete">删除</string>
    <string name="parking_no">车位编号：</string>
    <string name="parking_owner">车位主：</string>
    <string name="parking_owner_id">车位主ID：</string>
    <string name="rent_time">出租时间：</string>
    <string name="parking_owner_phone">联系方式：</string>
    <string name="rent_expense">费用：</string>
    <string name="control">控制</string>
    <string name="stop_rent">结束租用</string>
    <string name="up">上升</string>
    <string name="down">下降</string>
    <string name="not_connected">蓝牙未连接</string>
    <string name="reconnect">重新连接</string>
    <string name="refreshConnect">重新连接</string>
    <string name="infrared_state">红外线状态：</string>
    <string name="led_state">LED灯状态：</string>
    <string name="battery_state">电池电量：</string>

    <!--车位控制-->
    <string name="control_by_net_method">网络控制车位</string>
    <string name="control_by_bluetooth_method">蓝牙控制车位</string>

    <!--发布车位-->
    <string name="publish_parking_no">发布编号：</string>
    <string name="start_time">开始时间：</string>
    <string name="end_time">截止时间：</string>
    <string name="set_publish_time">设置发布时间</string>
    <string name="set_start_time">设置开始时间</string>
    <string name="set_end_time">设置截止时间</string>
    <string name="parking_price">车位价格(元/小时)：</string>
    <string name="save">保存</string>
    <string name="publish_style">发布方式：</string>
    <string name="publish_state">发布状态：</string>


    <string name="cancle">取消</string>
    <string name="title">请选择时间</string>
    <string name="commit">确定</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>

    <string name="select_date">选择日期</string>
    <string name="current_date">当前日期</string>
    <string name="select_time">选择时间</string>
    <string name="current_time">当前时间</string>

    <!-- 我的订单 -->
    <string name="ordering_detail">订单详情</string>
    <string name="confirm_rent">确定租用</string>
    <string name="set_rent_time">设置租用时间</string>
    <string name="ordering_id">订单编号：</string>
    <string name="ordering_state">订单状态：</string>

</resources>
