<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <include layout="@layout/title_common"></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">

        <ImageButton
            android:id="@+id/btn_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/up"
            android:onClick="up"
            android:background="@drawable/selector1"
            android:layout_gravity="center"
            android:textSize="18sp"/>

        <Button
            android:id="@+id/btn_refresh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center"
            android:text="@string/refreshConnect"
            android:onClick="reconnect"
            android:background="@drawable/selector"/>

        <ImageButton
            android:id="@+id/btn_down"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/down"
            android:background="@drawable/selector2"
            android:onClick="down"
            android:layout_gravity="center"
            android:textSize="18sp"/>

    </LinearLayout>

</LinearLayout>