<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#ebebeb">

    <include layout="@layout/title_common"></include>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/start_time"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="12dp"/>

    <EditText
        android:id="@+id/et_start_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="setStartTime"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="12dp"
        android:hint="请选择开始时间"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/end_time"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="12dp"/>

    <EditText
        android:id="@+id/et_end_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="setEndTime"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="12dp"
        android:hint="请选择截止时间"/>

    <Button
        android:id="@+id/save_time"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:text="@string/save"
        android:onClick="saveTime"/>

</LinearLayout>