<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ptr="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="#ebebeb">

    <include layout="@layout/title_myparking"></include>

    <LinearLayout
    android:id="@+id/register_parking_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:background="@color/white"
    android:orientation="horizontal">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:textSize="18sp"
        android:text="@string/register_parking"/>

    <ImageView
        android:layout_width="56dp"
        android:layout_height="match_parent"
        android:src="@drawable/ic_action_next_item"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/release_parking_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:textSize="18sp"
            android:text="@string/release_parking"/>

        <ImageView
            android:layout_width="56dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_action_next_item"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/rent_parking_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:textSize="18sp"
            android:text="@string/rent_parking"/>

        <ImageView
            android:layout_width="56dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_action_next_item"/>

    </LinearLayout>


</LinearLayout>

